# sssea

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: roma_config.py
config/profiles/: dev.yaml  prod.yaml
doc/: Agent-prd.md  Agent2Ageng协作.md  Agent规范技术白皮书.md  一个具体的流程.md
scripts/: check_env.py  demo_client.py
src/: config.py  main.py
src/agents/: __init__.py  aggregator.py  base.py  executor.py  perception.py  pipeline.py  planner.py  reflection.py
src/api/: openai_compat.py
src/attestation/: mock_quote.py
src/reasoning/: intent_analyzer.py  prompts.py
src/simulation/: __init__.py  anvil_screener.py  models.py
src/toolkits/: __init__.py  anvil_toolkit.py  base.py  forensics_toolkit.py  tee_toolkit.py
tests/: test_reasoning.py  test_simulation.py
